fix unreadable text in blog footer

--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -301,6 +301,7 @@ div#footer-home{
     padding: 10px;
     background-color: #231255;
     text-align: center;
+    color: #EEE;
 }
 
 div#footer-home a{
